# Bat2PE

./: Cargo.toml  README.md  README_CN.md  pyproject.toml
crates/bat2pe-cli/: Cargo.toml  build.rs
crates/bat2pe-cli/src/: main.rs
crates/bat2pe-core/: Cargo.toml
crates/bat2pe-core/src/: build.rs  error.rs  inspect.rs  lib.rs  model.rs  overlay.rs  resources.rs  runtime.rs  verify.rs
crates/bat2pe-py/: Cargo.toml  build.rs
crates/bat2pe-py/src/: lib.rs
crates/bat2pe-runtime-host/: Cargo.toml
crates/bat2pe-runtime-host/src/: main.rs
crates/bat2pe-stub-console/: Cargo.toml
crates/bat2pe-stub-console/src/: main.rs
crates/bat2pe-stub-windows/: Cargo.toml
crates/bat2pe-stub-windows/src/: main.rs
docs/: python-api-cn.md  python-api.md
python/bat2pe/: __init__.py  _api.py  _errors.py  _models.py
scripts/: change_version.py  compile.py
tests/: conftest.py  test_change_version_script.py  test_cli.py  test_compile_script.py  test_python_api.py  test_python_compat.py  test_runtime_semantics.py
tests/fixtures/: dp0_report.cmd  echo_stderr.bat
