[workspace]
resolver = "3"
members = [
  "crates/bat2pe-core",
  "crates/bat2pe-cli",
  "crates/bat2pe-runtime-host",
  "crates/bat2pe-py",
]
default-members = ["crates/bat2pe-cli"]

[workspace.package]
authors = ["Bat2PE Contributors"]
edition = "2024"
license = "MPL-2.0"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
