[package]
name = "bat2pe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "bat2pe-runtime-host"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
